<resources>
    <string name="app_name">TestApp</string>PrefectureListView
    <string name="ListViewTest">ListView Test</string>
    <string name="PrefectureListView">PrefectureListView</string>
    <string name="RecyclerViewTest">RecyclerView Test</string>
    <string name="PokeCardList">PokeCardList</string>
    <string name="TextInputTest">TextInput Test</string>
    <string name="Text">Text</string>
    <string name="TextPassword">TextPassword</string>
    <string name="NumberPassword">NumberPassword</string>
    <string name="ActionHome">Home</string>
    <string name="ActionSearch">Search</string>
    <string name="ActionNotification">Notification</string>
    <string name="ActionMail">Mail</string>
    <string name="VolleyTest">Volley Test</string>
    <string name="RequestTest">Request Test</string>
    <string name="Execute">Execute</string>
    <string name="Result">Result : </string>
    <string name="UseCustomRequestQueue">useCustomRequestQueue</string>
    <string name="MakeStandardRequest">MakeStandardRequest</string>
    <string name="VolleyPractice">VolleyPractice</string>
    <string name="GET">GET</string>
    <string name="POST">POST</string>
    <string name="PUT">PUT</string>
    <string name="PATCH">PATCH</string>
    <string name="DELETE">DELETE</string>
    <string name="ImageLoader">ImageLoader</string>
    <string name="SQLiteTest">SQLite Test</string>
    <string name="DialogsTest">Dialogs Test</string>
    <string name="TitleMessageOK">Title Message OK</string>
    <string name="TitleMessageOKCancel">Title Message OK Cancel</string>
    <string name="TitleMessageYesLaterNoDialog">Title Message Yes Later No</string>
    <string name="ThreeOptionsDialog">Three Options</string>
    <string name="RadioButtonDialog">Radio Button</string>
    <string name="CheckBoxDialog">Check Box Dialog</string>
    <string name="CustomLayout">Custom Layout</string>
    <string name="CustomDialogTest">CustomDialog Test</string>
    <string name="LaunchCustomDialog">LaunchCustomDialog</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="SignIn">SignIn</string>
    <string name="Cancel">Cancel</string>
    <string name="MaterialViewTest">MaterialView Test</string>
    <string name="SectionFormat">Hello World from section: %1$d</string>
    <string name="GlideTest">Glide Test</string>
    <string name="SetSoftInputModeTest">SetSoftInputMode Test</string>
    <string name="PermissionCheckTest">PermissionCheck Test</string>
    <string name="GetStorage">GetStorage</string>
    <string name="FirebaseTest">Firebase Test</string>
    <string name="LoginTest">Login Test</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
    <string name="GoogleMapTest">GoogleMap Test</string>
    <string name="title_activity_google_map_test">Map</string>
    <string name="NavigationDrawerTest">NavigationDrawer Test</string>
    <string name="ActionCamera">Camera</string>
    <string name="ActionShare">Share</string>
    <string name="ActionSend">Send</string>
    <string name="OkHttpTest">OkHttp Test</string>
</resources>
