<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/ActionHome"/>
        <item
            android:id="@+id/action_mail"
            android:icon="@drawable/ic_action_mail"
            android:title="@string/ActionMail"/>
        <item
            android:id="@+id/action_notification"
            android:icon="@drawable/ic_action_notification"
            android:title="@string/ActionNotification"/>
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/ActionSearch"/>
        <item
            android:id="@+id/action_camera"
            android:icon="@drawable/ic_action_camera"
            android:title="@string/ActionCamera"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_action_share"
                android:title="@string/ActionShare"/>
            <item
                android:id="@+id/action_send"
                android:icon="@drawable/ic_action_send"
                android:title="@string/ActionSend"/>
        </menu>
    </item>
</menu>