<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:id="@+id/appbar_layout">

        <include layout="@layout/snippet_toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnGet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/GET"
                    style="Widget.TestApp.Button"/>

                <Button
                    android:id="@+id/btnPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/POST"
                    style="Widget.TestApp.Button"/>

                <Button
                    android:id="@+id/btnPut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/PUT"
                    style="Widget.TestApp.Button"/>

                <Button
                    android:id="@+id/btnPatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/PATCH"
                    style="Widget.TestApp.Button"/>

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/DELETE"
                    style="Widget.TestApp.Button"/>

                <Button
                    android:id="@+id/btnImageLoader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/ImageLoader"
                    style="Widget.TestApp.Button"/>

                <com.android.volley.toolbox.NetworkImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/networkImageView"
                    android:scaleType="fitXY"/>

            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/bottomNavigationView"
            android:layout_gravity="bottom"
            app:menu="@menu/menu_bottom"
            style="@style/TextAppearance.TestApp.BottomNavigation"
            app:itemIconTint="@drawable/bottom_navigation_item_state"
            app:itemTextColor="@drawable/bottom_navigation_item_state"/>

    </LinearLayout>
</LinearLayout>