<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:id="@+id/appbar_layout">

        <include layout="@layout/snippet_toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputTypeTextLayout"
                android:layout_margin="8dp"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputTypeText"
                    android:hint="@string/Text"
                    android:imeOptions="actionSend"
                    android:inputType="text"
                    android:maxLines="1"
                    style="@style/TextAppearance.MaterialComponents.Body1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputTypeTextPasswordLayout"
                android:layout_margin="8dp"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputTypeTextPassword"
                    android:hint="@string/TextPassword"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    style="@style/TextAppearance.MaterialComponents.Body1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/inputTypeNumberPasswordLayout"
                android:layout_margin="8dp"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputTypeNumberPassword"
                    android:hint="@string/NumberPassword"
                    android:imeOptions="actionSend"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    style="@style/TextAppearance.MaterialComponents.Body1"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/bottomNavigationView"
            android:layout_gravity="bottom"
            app:menu="@menu/menu_bottom"
            style="@style/TextAppearance.TestApp.BottomNavigation"
            app:itemIconTint="@drawable/bottom_navigation_item_state"
            app:itemTextColor="@drawable/bottom_navigation_item_state"/>

    </LinearLayout>
</LinearLayout>